add switch UI for test

--- a/apps/settings/elements/developer.html
+++ b/apps/settings/elements/developer.html
@@ -34,6 +34,11 @@
             <input type="text" name="devtools.discovery.device" dir="auto">
         </li>
         <li>
+          <gaia-checkbox name="dom.presentation.discoverable">
+            <label data-l10n-id="presentation-api-discoverable"></label>
+          </gaia-checkbox>
+        </li>
+        <li>
           <a class="menu-item" href="#developer-hud">
             <span data-l10n-id="hud-settings-button"></span>
           </a>
